--- a/react-task-tracker/src/index.css
+++ b/react-task-tracker/src/index.css
@@ -18,6 +18,10 @@ body {
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
